# Greeners

./: .gitignore  CHANGELOG.md  COLLINEARITY_DETECTION.md  COLLINEARITY_STATUS.md  CONTRIBUTING.md  Cargo.toml  FORMULA_API.md  LICENSE  README.md  ROADMAP.md  binary_test.csv  collinear_test.csv  data.json  multi_collinear.csv  panel_data.csv  wage_data.csv
.github/workflows/: ci.yml
benches/: lp_did.rs  micro.rs
doc/: grenners.tex
examples/: advanced_dataframe.rs  advanced_operations.rs  arellano_bond_sim.rs  arima_example.rs  between_example.rs  bool_features.rs  bool_in_regression.rs  bootstrap_hypothesis.rs  categorical_features.rs  categorical_polynomial.rs  clustered_se_example.rs  complete_type_detection_demo.rs  csv_formula_example.rs  csv_with_strings.rs  dataframe_demo.rs  dataframe_loading.rs  datetime_features.rs  diagnostics_example.rs  diagnostics_test.rs  did_example.rs  did_formula_example.rs  dummy_variables_guide.rs  fgls_example.rs  formula_example.rs  glm_example.rs  gmm_test.rs  inference_type_example.rs  integer_features.rs  iv_simulation.rs  logit_test.rs  marginal_effects.rs  missing_data_features.rs  missing_data_handling.rs  panel_example.rs  panel_model_selection.rs  pivot_tables.rs  probit_vs_logit.rs  quantile_example.rs  quickstart_formula.rs  re_example.rs  (+22 more)
examples/data/: cattaneo2.csv  data.csv  dataset.csv  sample_data.csv  test_data.csv  test_data_columns.json  test_data_records.json
src/: arima.rs  autoreg.rs  bart.rs  bayesian_linear.rs  bayesian_sc.rs  bayesian_sfa.rs  beta_model.rs  binary_diagnostics.rs  biplot.rs  bootstrap.rs  bvar.rs  causal_forest.rs  causal_impact.rs  column.rs  conditional.rs  conformal.rs  copula.rs  cuped.rs  dataframe.rs  datasets.rs  dbscan.rs  dcc_garch.rs  decomposition.rs  descrstatsw.rs  dfm.rs  diagnostics.rs  did.rs  discrete.rs  distributions.rs  dml_crossfit.rs  double_ml.rs  dr_learner.rs  dynamic_factor.rs  dynamic_panel.rs  error.rs  ets.rs  event_study.rs  export.rs  fa_panel.rs  fama_macbeth.rs  (+109 more)
tests/: arima_tests.rs  bootstrap_tests.rs  diagnostics_tests.rs  did_tests.rs  discrete_tests.rs  dynamic_factor_tests.rs  dynamic_panel_tests.rs  edge_case_tests.rs  fama_macbeth_tests.rs  fgls_tests.rs  garch_tests.rs  generate_reference_data.py  glm_tests.rs  gmm_tests.rs  heckman_tests.rs  iv_tests.rs  lp_did.rs  markov_autoreg_tests.rs  model_selection_tests.rs  mstl_tests.rs  multipletests_tests.rs  ols_tests.rs  panel_tests.rs  phase1_tests.rs  phase2_tests.rs  phase3_tests.rs  phase4_tests.rs  phase5_tests.rs  phase6_tests.rs  proportion_tests.rs  psm_tests.rs  quantile_tests.rs  reference_accuracy_tests.rs  reference_values.csv  specification_tests_unit.rs  tobit_tests.rs  uc_tests.rs  untested_modules_tests.rs  vecm_bootstrap_se_test.rs  vecm_table_test.rs
