[package]
name = "greeners"
version = "1.3.2"
edition = "2021"
authors = ["Flávio de Vasconcellos Corrêa <contact@greeners.io>"]
description = "High-performance econometrics with R/Python formulas. Two-Way Clustering, Marginal Effects (AME/MEM), HC1-4, IV Predictions, Categorical C(var), Polynomial I(x^2), Interactions, Diagnostics. OLS, IV/2SLS, DiD, Logit/Probit, Panel (FE/RE), Time Series (VAR/VECM), Quantile!"
license = "GPL-3.0-or-later"
repository = "https://github.com/sheep-farm/Greeners" # Link OBRIGATÓRIO para o GitHub
readme = "README.md"
keywords = ["econometrics", "statistics", "finance", "gmm", "data-analysis"]
categories = ["science", "mathematics", "simulation"]

# Otimização para release (deixa a lib mais rápida para quem baixar)
[profile.release]
opt-level = 3
lto = true

[dependencies]
# Core N-dimensional array library
ndarray = "0.17.1"
# Linear algebra backend (Lapack/Blas bindings are required for inversion)
# You might need to install OpenBLAS on your OS (e.g., `sudo apt install libopenblas-dev`)
ndarray-linalg = { version = "0.18.0", features = ["openblas-system"] }
# Error handling
thiserror = "2.0.17"
statrs = "0.18.0" # Essential for p-values and distributions
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rand = "0.8"
ndarray-rand = "0.14"
num-complex = "0.4.6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
ndarray-rand = "0.14" # Para gerar matrizes aleatórias nos exemplos
