[package]
name = "greeners"
version = "1.5.5-dev"
edition = "2021"
authors = ["Flávio de Vasconcellos Corrêa <contact@greeners.io>"]
description = "High-performance econometrics with R/Python formulas. Two-Way Clustering, Marginal Effects (AME/MEM), HC1-4, IV Predictions, Categorical C(var), Polynomial I(x^2), Interactions, Diagnostics. OLS, IV/2SLS, DiD, Logit/Probit, Panel (FE/RE), Time Series (VAR/VECM), Quantile!"
license = "MIT"
repository = "https://github.com/sheep-farm/Greeners"
readme = "README.md"
keywords = ["econometrics", "statistics", "finance", "gmm", "data-analysis"]
categories = ["science", "mathematics", "simulation"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
odre-ffi = []  # Enable FFI exports for Odre plugin system
# Enable URL-based DataFrame loading (pulls in reqwest on native targets).
url = ["dep:reqwest"]

# Otimização para release (deixa a lib mais rápida para quem baixar)
[profile.release]
opt-level = 3
lto = true

[dependencies]
# Core N-dimensional array library
ndarray = "0.17.1"
# Pure-Rust linear algebra backend (no system BLAS/LAPACK required)
faer = "0.22"
# Error handling
thiserror = "2.0.17"
statrs = "0.18.0" # Essential for p-values and distributions
csv = "1.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ndarray-rand = "0.14"
num-complex = "0.4.6"
chrono = { version = "0.4", features = ["serde"] }
# Pure-Rust numerical optimisation (L-BFGS, Nelder-Mead, etc.)
argmin = "0.11.0"
argmin-math = { version = "0.5", features = ["vec"] }
indexmap = { version = "2", features = ["serde"] }
# Data-parallelism for independent estimator loops
rayon = "1.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"], optional = true }

[dev-dependencies]
ndarray-rand = "0.14" # Para gerar matrizes aleatórias nos exemplos
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "lp_did"
harness = false

[[example]]
name = "dataframe_loading"
required-features = ["url"]
